added new storage for problems (#36)
* added new storage for problems

* fixed issues

* fixed issues
